Fixes #127 by changing the z-index

--- a/src/components/style/ParameterForm.css
+++ b/src/components/style/ParameterForm.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 4;
+  z-index: 100;
 }
 .parameterFormContainer.active {
   display: flex;
@@ -26,7 +26,6 @@
   background-color: var(--backgroundSecondary);
   border-radius: 10px;
   padding: 20px;
-  box-shadow: 0px 0px 10px 0px var(--ornamentalDivider);
   overflow-y: visible;
   overflow-x: hidden;
 }
@@ -51,6 +50,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  margin: 1rem;
 }
 .parameterForm .closeButton:hover {
   background-color: var(--backgroundSecondary);
