--- a/src/components/style/Toolbar.css
+++ b/src/components/style/Toolbar.css
@@ -115,9 +115,7 @@
 
 @media screen and (max-width: 768px) {
   .toolbarContainer {
-    justify-content: flex-start;
-
-
+    justify-content: space-between;
   }
   .toolbar {
     position: absolute;
